--- a/myskills.html
+++ b/myskills.html
@@ -75,29 +75,55 @@
     
     <!-- Main Section -->
 	<div id="main-content" class="container">
-		
-		<!--This is for responsive image for mobile size-->
-		<div class="jumbotron ">
-			<img src="./data/nitrr.jpg" alt="NIT Raipur Image" class="img-responsive visible-xs">
-		</div>	
-        
-      <div class="home-tiles" class="row">
-      	    <div class="col-md-4 col-sm-6 col-xs-12">
-      	    	<a href="myskills.html"><div id="myskills-tile">
-      	    		<span>Languages</span></div></a>
-      	    </div>
-      	    <div class="col-md-4 col-sm-6 col-xs-12">
-      	    	<a href="single-catagories.html"><div id="single-tile">
-      	    		<span>Special Tech</span></div></a>
-      	    </div>
-      	    <!-- This is for map block -->
-      	    <div class="col-md-4 col-sm-12 col-xs-12">
-      	    	<!-- Here I copied link of NIT Raipur -->
-      	    	<a href="https://goo.gl/maps/v3ZVwWgobDC2" target="_blank"><div id="map-tile">
-      	    		<iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d118993.58232824304!2d81.53498868013342!3d21.249707739157486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3a28dde213f66723%3A0x21543965c50c43c7!2snit+raipur!3m2!1d21.2497222!2d81.6050291!5e0!3m2!1sen!2sin!4v1534681572291" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-      	    		<span>Map</span></div></a>
-      	    </div>
-      </div>
+		<h2 id="skills-catagories-title" class="text-center">Skill Catagories</h2>
+		<div class="text-center">This is to be updated</div>
+
+		<section class="row">
+			<div class="col-md-3"><a href="single-catagory.html">
+				<div class="catagory-tile">
+				<img src="./data/awards200.jpg"; width="300"; height="200"; alt="skill 1"><span>Skill 1 </span></div>
+			</a></div>
+
+			<div class="col-md-3"><a href="single-catagory.html">
+				<div class="catagory-tile">
+				<img src="./data/awards200.jpg"; width="300"; height="200"; alt="skill 2"><span>Skill 2</span></div>
+			</a></div>
+
+			<div class="col-md-3"><a href="single-catagory.html">
+				<div class="catagory-tile">
+				<img src="./data/awards200.jpg"; width="300"; height="200"; alt="skill 1"><span>Skill 3</span></div>
+			</a></div>
+
+			<div class="col-md-3"><a href="single-catagory.html">
+				<div class="catagory-tile">
+				<img src="./data/awards200.jpg"; width="300"; height="200"; alt="skill 1"><span>Skill 4</span></div>
+			</a></div>
+
+			<div class="col-md-3"><a href="single-catagory.html">
+				<div class="catagory-tile">
+				<img src="./data/awards200.jpg"; width="300"; height="200"; alt="skill 1"><span>Skill 5</span></div>
+			</a></div>
+
+			<div class="col-md-3"><a href="single-catagory.html">
+				<div class="catagory-tile">
+				<img src="./data/awards200.jpg"; width="300"; height="200"; alt="skill 1"><span>Skill 6</span></div>
+			</a></div>
+
+			<div class="col-md-3"><a href="single-catagory.html">
+				<div class="catagory-tile">
+				<img src="./data/awards200.jpg"; width="300"; height="200"; alt="skill 1"><span>Skill 7</span></div>
+			</a></div>
+
+			<div class="col-md-3"><a href="single-catagory.html">
+				<div class="catagory-tile">
+				<img src="./data/awards200.jpg"; width="300"; height="200"; alt="skill 1"><span>Skill 8</span></div>
+			</a></div>
+
+			<div class="col-md-3"><a href="single-catagory.html">
+				<div class="catagory-tile">
+				<img src="./data/awards200.jpg"; width="300"; height="200"; alt="skill 1"><span>Skill 9</span></div>
+			</a></div>
+		</section>
 
     </div><!-- Main content end -->
 
