--- a/myskills.html
+++ b/myskills.html
@@ -79,47 +79,47 @@
 		<div class="text-center">This is to be updated</div>
 
 		<section class="row">
-			<div class="col-md-3 col-sm-4"><a href="single-catagory.html">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12"><a href="single-catagory.html">
 				<div class="catagory-tile">
 				<img src="./data/awards200.jpg"; width="200"; height="200"; alt="skill 1"><span>Skill 1 </span></div>
 			</a></div>
 
-			<div class="col-md-3 col-sm-4"><a href="single-catagory.html">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12"><a href="single-catagory.html">
 				<div class="catagory-tile">
 				<img src="./data/awards200.jpg"; width="200"; height="200"; alt="skill 2"><span>Skill 2</span></div>
 			</a></div>
 
-			<div class="col-md-3 col-sm-4"><a href="single-catagory.html">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12"><a href="single-catagory.html">
 				<div class="catagory-tile">
 				<img src="./data/awards200.jpg"; width="200"; height="200"; alt="skill 1"><span>Skill 3</span></div>
 			</a></div>
 
-			<div class="col-md-3 col-sm-4"><a href="single-catagory.html">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12"><a href="single-catagory.html">
 				<div class="catagory-tile">
 				<img src="./data/awards200.jpg"; width="200"; height="200"; alt="skill 1"><span>Skill 4</span></div>
 			</a></div>
 
-			<div class="col-md-3 col-sm-4"><a href="single-catagory.html">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12"><a href="single-catagory.html">
 				<div class="catagory-tile">
 				<img src="./data/awards200.jpg"; width="200"; height="200"; alt="skill 1"><span>Skill 5</span></div>
 			</a></div>
 
-			<div class="col-md-3 col-sm-4"><a href="single-catagory.html">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12"><a href="single-catagory.html">
 				<div class="catagory-tile">
 				<img src="./data/awards200.jpg"; width="200"; height="200"; alt="skill 1"><span>Skill 6</span></div>
 			</a></div>
 
-			<div class="col-md-3 col-sm-4"><a href="single-catagory.html">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12"><a href="single-catagory.html">
 				<div class="catagory-tile">
 				<img src="./data/awards200.jpg"; width="200"; height="200"; alt="skill 1"><span>Skill 7</span></div>
 			</a></div>
 
-			<div class="col-md-3 col-sm-4"><a href="single-catagory.html">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12"><a href="single-catagory.html">
 				<div class="catagory-tile">
 				<img src="./data/awards200.jpg"; width="200"; height="200"; alt="skill 1"><span>Skill 8</span></div>
 			</a></div>
 
-			<div class="col-md-3 col-sm-4"><a href="single-catagory.html">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12"><a href="single-catagory.html">
 				<div class="catagory-tile">
 				<img src="./data/awards200.jpg"; width="200"; height="200"; alt="skill 1"><span>Skill 9</span></div>
 			</a></div>
