--- a/single-catagory.html
+++ b/single-catagory.html
@@ -75,10 +75,21 @@
     
     <!-- Main Section -->
 	<div id="main-content" class="container">
+       <h2 id="skill-catagory-title" class="text-center">Langauges</h2>
+       <div class="text-center">Last updated 20-08-2018 12:00 PM</div>
 
+       <section class="row">
+       	<div class="skills-item col-md-6">
+       		<div class="row">
+       			<div class="col-sm-5">
+       				<div class="skill-item-photo"></div><div>Skill1A</div>
+       			</div>
 
+       		</div>
+       	</div>
+       </section>
     </div><!-- Main content end -->
-
+            
     <!-- footer start -->
     <footer class="panel-footer">
     	<div class="container"><div class="row">
