--- a/single-catagory.html
+++ b/single-catagory.html
@@ -79,13 +79,38 @@
        <div class="text-center">Last updated 20-08-2018 12:00 PM</div>
 
        <section class="row">
+       	<div class="skill-item-title col-md-6">
+       		<div class="row">
+       			<div class="col-sm-5">
+       				<div class="skill-item-photo">
+       					<div>Skill1A</div>
+       				    <img src="./data/skill1b.png" width="250" height="150" alt="skill" class="img-responsive">
+       			    </div>
+                    <div class="skill-rating">-- out of 10<span>(coding)</span>-- out of 10<span>(Project)</span></div> 
+       		    </div>
+
+       		    <div class="skill-rating-desc col-sm-7">
+       			   <h3 class="skill-item-title">C Language</h3><p class="skill-item-details">This is to be updated. So wait for the next update. Thanks!!</p>
+        	    </div> 
+        	</div>    
+        		<hr class="visible-xs">
+       	</div>
+
        	<div class="skills-item col-md-6">
        		<div class="row">
        			<div class="col-sm-5">
-       				<div class="skill-item-photo"></div><div>Skill1A</div>
-       			</div>
+       				<div class="skill-item-photo">
+       					<div>Skill1B</div>
+       				    <img src="./data/skill1b.png" width="250" height="150" alt="skill" class="img-responsive">
+       			    </div>
+                    <div class="skill-rating">-- out of 10<span>(coding)</span>-- out of 10<span>(Project)</span></div> 
+       		    </div>
 
-       		</div>
+       		    <div class="skill-rating-desc col-sm-7">
+       			   <h3 class="skill-item-title">JAVA Language</h3><p class="skill-item-details">This is to be updated. So wait for the next update. Thanks!!</p>
+        	    </div> 
+        	</div>    
+        		<hr class="visible-xs">
        	</div>
        </section>
     </div><!-- Main content end -->
