--- a/myskills.html
+++ b/myskills.html
@@ -143,7 +143,7 @@
     	<div class="text-center">&copy; Copyright abhishek2kr 2018</div>
     </div>
     </footer>
-	<h1 class="text-center visible-xs">!! Welcome to this Amazing page !!</h1>
+	<!-- <h1 class="text-center visible-xs">!! Welcome to this Amazing page !!</h1> -->
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
