--- a/single-catagory.html
+++ b/single-catagory.html
@@ -83,7 +83,7 @@
        		<div class="row">
        			<div class="col-sm-5">
        				<div class="skill-item-photo">
-       					<div>Skill1A</div>
+       					<div>Skill 1</div>
        				    <img src="./data/skill1b.png" width="250" height="150" alt="skill" class="img-responsive">
        			    </div>
                     <div class="skill-rating">--/10<span>(coding),  </span>--/10<span>(Project)</span></div> 
@@ -100,7 +100,7 @@
        		<div class="row">
        			<div class="col-sm-5">
        				<div class="skill-item-photo">
-       					<div>Skill1B</div>
+       					<div>Skill 2</div>
        				    <img src="./data/skill1b.png" width="250" height="150" alt="skill" class="img-responsive">
        			    </div>
                     <div class="skill-rating">--/10<span>(coding),  </span>--/10<span>(Project)</span></div> 
@@ -108,6 +108,74 @@
 
        		    <div class="skill-rating-desc col-sm-7">
        			   <h3 class="skill-item-title">JAVA Language</h3><p class="skill-item-details">This is to be updated. So wait for the next update. Thanks!!</p>
+        	    </div> 
+        	</div>    
+        		<hr class="visible-xs">
+       	</div>
+
+       	<div class="skills-item-title col-md-6">
+       		<div class="row">
+       			<div class="col-sm-5">
+       				<div class="skill-item-photo">
+       					<div>Skill 3</div>
+       				    <img src="./data/skill1b.png" width="250" height="150" alt="skill" class="img-responsive">
+       			    </div>
+                    <div class="skill-rating">--/10<span>(coding),  </span>--/10<span>(Project)</span></div> 
+       		    </div>
+
+       		    <div class="skill-rating-desc col-sm-7">
+       			   <h3 class="skill-item-title">HTML/CSS/Bootstrap</h3><p class="skill-item-details">This is to be updated. So wait for the next update. Thanks!!</p>
+        	    </div> 
+        	</div>    
+        		<hr class="visible-xs">
+       	</div>
+
+       	<div class="skills-item-title col-md-6">
+       		<div class="row">
+       			<div class="col-sm-5">
+       				<div class="skill-item-photo">
+       					<div>Skill 4</div>
+       				    <img src="./data/skill1b.png" width="250" height="150" alt="skill" class="img-responsive">
+       			    </div>
+                    <div class="skill-rating">--/10<span>(coding),  </span>--/10<span>(Project)</span></div> 
+       		    </div>
+
+       		    <div class="skill-rating-desc col-sm-7">
+       			   <h3 class="skill-item-title">JavaScript Language</h3><p class="skill-item-details">This is to be updated. So wait for the next update. Thanks!!</p>
+        	    </div> 
+        	</div>    
+        		<hr class="visible-xs">
+       	</div>
+
+       	<div class="skills-item-title col-md-6">
+       		<div class="row">
+       			<div class="col-sm-5">
+       				<div class="skill-item-photo">
+       					<div>Skill 5</div>
+       				    <img src="./data/skill1b.png" width="250" height="150" alt="skill" class="img-responsive">
+       			    </div>
+                    <div class="skill-rating">--/10<span>(coding),  </span>--/10<span>(Project)</span></div> 
+       		    </div>
+
+       		    <div class="skill-rating-desc col-sm-7">
+       			   <h3 class="skill-item-title">Data Structures</h3><p class="skill-item-details">This is to be updated. So wait for the next update. Thanks!!</p>
+        	    </div> 
+        	</div>    
+        		<hr class="visible-xs">
+       	</div>
+
+       	<div class="skills-item-title col-md-6">
+       		<div class="row">
+       			<div class="col-sm-5">
+       				<div class="skill-item-photo">
+       					<div>Skill 6</div>
+       				    <img src="./data/skill1b.png" width="250" height="150" alt="skill" class="img-responsive">
+       			    </div>
+                    <div class="skill-rating">--/10<span>(coding),  </span>--/10<span>(Project)</span></div> 
+       		    </div>
+
+       		    <div class="skill-rating-desc col-sm-7">
+       			   <h3 class="skill-item-title">PL/SQL Language</h3><p class="skill-item-details">This is to be updated. So wait for the next update. Thanks!!</p>
         	    </div> 
         	</div>    
         		<hr class="visible-xs">
