--- a/single-catagory.html
+++ b/single-catagory.html
@@ -124,7 +124,15 @@
        		    </div>
 
        		    <div class="skill-rating-desc col-sm-7">
-       			   <h3 class="skill-item-title">HTML/CSS/Bootstrap</h3><p class="skill-item-details">This is to be updated. So wait for the next update. Thanks!!</p>
+       			   <h3 class="skill-item-title">HTML/CSS/Bootstrap</h3><p class="skill-item-details">This is to be updated. So wait for the next update. Thanks!!
+       			   This is to be updated. So wait for the next update. Thanks!!
+       			   This is to be updated. So wait for the next update. Thanks!!
+       		       This is to be updated. So wait for the next update. Thanks!!
+       	           This is to be updated. So wait for the next update. Thanks!!
+                   This is to be updated. So wait for the next update. Thanks!!
+                   This is to be updated. So wait for the next update. Thanks!!
+       	           This is to be updated. So wait for the next update. Thanks!!
+                   This is to be updated. So wait for the next update. Thanks!!</p>
         	    </div> 
         	</div>    
         		<hr class="visible-xs">
@@ -146,7 +154,7 @@
         	</div>    
         		<hr class="visible-xs">
        	</div>
-
+        <div class="clearfix visible-md-block visible-lg-block"></div> 
        	<div class="skills-item-title col-md-6">
        		<div class="row">
        			<div class="col-sm-5">
