--- a/single-catagory.html
+++ b/single-catagory.html
@@ -112,6 +112,8 @@
         	</div>    
         		<hr class="visible-xs">
        	</div>
+<!--  To control the if paragraph will be more in languages then it will fix that like clear:left --> 
+           <div class="clearfix visible-md-block visible-lg-block"></div>
 
        	<div class="skills-item-title col-md-6">
        		<div class="row">
