--- a/single-catagory.html
+++ b/single-catagory.html
@@ -41,18 +41,18 @@
 				</div>
 				<div id="collapsable-nav" class="collapse navbar-collapse">
 					<ul id="nav-list" class="nav navbar-nav navbar-right">
-						<li><a href="myskills.html">
+						<li class="active"><a href="myskills.html">
 							<span class="glyphicon glyphicon-list-alt"></span>
 							<!-- <span class="glyphicon glyphicon-cultery"></span> -->
 							<br class="hidden-xs">Skills</a>
 						</li>
 												
-						<li><a href="about.html">
+						<li><a href="#">
 							<span class="glyphicon glyphicon-info-sign"></span>
 							<br class="hidden-xs">About</a>
 					    </li>
 												
-						<li><a href="awards.html">
+						<li><a href="#">
 							<span class="glyphicon glyphicon-certificate"></span>
 							<br class="hidden-xs">Awards</a>
 						</li>
