--- a/myskills.html
+++ b/myskills.html
@@ -41,7 +41,13 @@
 				</div>
 				<div id="collapsable-nav" class="collapse navbar-collapse">
 					<ul id="nav-list" class="nav navbar-nav navbar-right">
-						<li class="active"><a href="myskills.html">
+						<li class="visible-xs active">
+						<a href="index.html">
+							<span class="glyphicon glyphicon-home"></span> Home
+						</a>
+					</li>
+
+					<li><a href="myskills.html">
 							<span class="glyphicon glyphicon-list-alt"></span>
 							<!-- <span class="glyphicon glyphicon-cultery"></span> -->
 							<br class="hidden-xs">Skills</a>
