--- a/single-catagory.html
+++ b/single-catagory.html
@@ -209,7 +209,7 @@
     		</section>
     		<section id="testinomials" class="col-sm-4">
     			<p>"One of the best coder"</p>
-    			<p>Unique Thinker ans more...</p>
+    			<p>Unique Thinker and more...</p>
     		</section>
     	</div>
     	<div class="text-center">&copy; Copyright abhishek2kr 2018</div>
